<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <TextView
        android:id="@+id/universidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="125dp"
        android:layout_y="35dp"
        android:text="@string/universidad"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/creado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="161dp"
        android:layout_y="94dp"
        android:text="@string/creado"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="96dp"
        android:layout_y="165dp"
        android:text="Juan Pablo Moncayo Torres"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="163dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="93dp"
        android:layout_y="211dp"
        app:srcCompat="@drawable/unimar"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="219dp" />

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="145dp"
        android:layout_y="436dp"
        android:onClick="salir"
        android:text="@string/salir"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="0dp" />
</AbsoluteLayout>